--- a/config.yml
+++ b/config.yml
@@ -31,6 +31,19 @@ plugins:
         database: funeral.db
 
 ssh:
-  server: 10.70.116.40
-  userid: pi
-  passwd: raspberry
+  client: 
+     1: '10.70.116.41'
+     2: '10.70.116.42'
+     3: '10.70.116.43'
+     5: '10.70.116.45'
+     6: '10.70.116.46'
+     7: '10.70.116.47'
+     8: '10.70.116.48'
+     9: '10.70.116.49'
+     10: '10.70.116.50'
+     11: '10.70.116.51'
+  userid: 'pi'
+  passwd: 'svhf8460'
+
+url:
+  host: 'http://10.70.116.40:5000'
