DBMS change for PostgreSQL V4.3 (2013-05-03)

--- a/config.yml
+++ b/config.yml
@@ -27,8 +27,11 @@ engines:
 
 plugins:
     Database:
-        driver: SQLite
-        database: funeral.db
+        driver: 'Pg'
+        database: 'postgres'
+        username: 'postgres'
+        password: '7025'
+        host: 'localhost'
 
 ssh:
   client: 
